# bookstore-02

./: Dockerfile  README.md  auto.py  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: build.yml
bookstore/: settings.py
bookstore_02/: settings.py  urls.py  wsgi.py
home/: views.py
order/: models.py  serializers.py  urls.py  viewsets.py
order/migrations/: 0001_initial.py  0002_remove_order_product_order_product.py
order/tests/: test_models.py  test_serializers.py
product/: models.py  serializers.py  urls.py  viewsets.py
product/migrations/: 0001_initial.py  0002_product_slug.py
product/tests/: test_models.py  test_serializers.py
